--- a/lab 5/styles.css
+++ b/lab 5/styles.css
@@ -33,7 +33,7 @@ section {
   margin: 0 auto;
   padding: 40px;
   width: 50%;
-  max-width: 1440px;
+  width: 1440px;
   background-color: white;
 }
 a {
