--- a/lab 6/styles.css
+++ b/lab 6/styles.css
@@ -50,7 +50,7 @@
   animation: shiver 1s infinite;
 
   &:hover {
-    animation: none;
+    animation-play-state: paused;
     background-color: green;
     cursor: url(assets/cursors/Arrow.cur), pointer;
   }
@@ -58,24 +58,31 @@
 
 .important-link {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
+}
+
+.important-link__a {
+  position: relative;
+  color: black;
+  text-decoration: none;
   transition: color 1s ease;
-
-  &:hover {
-    color: green;
-
-    .important-link__line {
-      width: 100%;
-    }
-  }
-
-  .important-link__line {
-    background-color: green;
+  &::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: -2px;
+    width: 0;
     height: 2px;
-    width: 0px;
-    transition: width 1s ease;
+    background-color: green;
+    transition: width 1s ease, left 1s ease;
+  }
+}
+
+.important-link__a:hover {
+  color: green;
+  &::after {
+    width: 100%;
+    left: 0;
   }
 }
 
@@ -135,7 +142,7 @@ p {
 }
 
 .fallen-ball:hover .fallen-ball__ball {
-  animation: fall 3s 1;
+  animation: fall 1.5s 1;
 }
 
 .fallen-ball__surface {
@@ -234,11 +241,11 @@ p {
 }
 
 .newton-cradle:hover .newton-cradle__ball-part--first {
-  animation: cradle-first 3s 1;
+  animation: cradle-first 1.5s 1;
   transform-origin: top center;
 }
 
 .newton-cradle:hover .newton-cradle__ball-part--last {
-  animation: cradle-last 3s 1;
+  animation: cradle-last 1.5s 1;
   transform-origin: top center;
 }
